continuing to add min-height to prevent shifts

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -80,7 +80,7 @@ p {
 
 .button {
   display: inline-block;
-  padding: 0.75em 1.5em;
+  padding: 0.2em 1em;
   font-size: 1vw;
   color: white;
   background-color: #fe0000;
@@ -574,11 +574,12 @@ nav ul li :hover {
   height: auto;
 }
 
-.category-buttons2 a,
-.category-buttons1 a {
+.category-buttons2 .button,
+.category-buttons1 .button {
   margin: 0 auto;
   font-weight: 700;
   border: 1px solid black;
+  padding: 0.5em 1em;
 }
 
 .category-buttons2 {
@@ -870,8 +871,8 @@ nav ul li :hover {
   justify-content: center;
   flex: 1;
   width: 32vw;
-  height: 3.5vh;
-  margin: 0.5em auto 0;
+  height: auto;
+  margin: 0 auto;
 
 }
 
@@ -894,10 +895,19 @@ nav ul li :hover {
 }
 
 .btn2 {
-  height: 2.5em;
+  height: auto;
   margin-left: 0.5em;
   margin-bottom: 1em;
   border-radius: 0.25em;
+}
+
+.btn3 {
+  height: auto;
+
+}
+
+.btn3 a {
+  font-size: 1vw;
 }
 
 .join-section {
@@ -905,6 +915,7 @@ nav ul li :hover {
   min-width: 30vw;
   width: 100%;
   height: auto;
+  min-height: 5vh;
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: darken;
   background-repeat: no-repeat;
@@ -928,6 +939,10 @@ nav ul li :hover {
   display: flex;
   flex-direction: column;
   justify-content: left;
+  max-width: 90vw;
+  width: 90%;
+  min-height: 2vh;
+  height: auto;
   text-align: left;
   margin: auto 0;
 }
@@ -937,7 +952,11 @@ nav ul li :hover {
   color: white;
   margin: 0;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  max-width: 100vw;
+  height: auto;
 }
+
 
 .join-text h3 {
   font-size: 3.5vw;
@@ -949,18 +968,22 @@ nav ul li :hover {
 }
 
 .join-text-bottom {
-  width: 100%;
+  width: 80%;
+  max-width: 80vw;
+  height: auto;
+  min-height: 2vh;
 }
 
 .bottom-nav h5,
 .join-text-bottom p {
   color: #1a1d9e;
   margin: 0;
+  width: 100%;
+  height: auto;
 }
 
 .join-text-bottom p {
   font-size: 1.3vw;
-  width: 100%;
 }
 
 /* submit content form */
@@ -2073,60 +2096,62 @@ button.btn5:hover {
     min-width: 10vw;
   }
 
+  .categories-title,
   .feature-title {
     padding: 3em 0 0.5em;
+    width: 80%;
+    max-width: 80vw;
+    height: auto;
+    margin: 0 auto;
   }
 
+  .categories-title h2,
   .feature-title h2 {
     font-size: 5.5vw;
-  }
-
-  .categories h3 {
-    font-size: 5vw;
-    width: 80vw;
-
+    width: 100%;
+    height: auto;
+    text-align: center;
+    align-items: center;
   }
 
   .categories {
-    width: 100%;
-    height: auto;
     padding-bottom: 2.5em;
-    width: 100%;
-    height: auto;
-    max-width: 100vw;
-    min-width: 10vw;
   }
 
-  .categories,
-  .feature-article {
+  .categories {
     display: flex;
     flex-direction: column;
-    margin: auto 0;
+    margin: 0 auto;
     width: 100%;
     max-width: 100vw;
     height: auto;
+    min-height: 5vh;
   }
 
   .feature-article-grid {
     grid-template-columns: repeat(2, 1fr);
     gap: 1em;
-    width: 80%;
-    max-width: 80vw;
-    height: auto;
-    min-height: 20vh;
   }
+
 
   .categories-grid {
     grid-template-columns: repeat(2, 1fr);
     gap: 1em;
-    width: 80%;
-    max-width: 80vw;
-    height: auto;
-    min-height: 20vh;
+    margin: 0 auto;
   }
 
   .feature-box {
     padding: 1em 0;
+    width: 38.5vw;
+    max-width: 40vw;
+    min-height: 10vh;
+    height: auto;
+  }
+
+  .feature-box img {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 5 / 4;
   }
 
   .categories-grid,
@@ -2139,8 +2164,16 @@ button.btn5:hover {
     margin: 1em auto 2em;
   }
 
+  .feature-box-text {
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    min-height: 1vh;
+  }
+
   .feature-box-text a p {
     font-size: 3.5vw;
+    width: 100%;
     height: auto;
     padding: 1vw 0.5vw 0.5vw;
   }
@@ -2149,10 +2182,6 @@ button.btn5:hover {
     font-size: 3.2vw;
     height: auto;
     padding: 0.5vw;
-  }
-
-  .categories-title h2 {
-    font-size: 7vw;
   }
 
   .search-container {
@@ -2282,6 +2311,8 @@ button.btn5:hover {
     margin: 0 auto;
     padding: 0.5em 0;
   }
+
+
 
   .input-text input::placeholder {
     font-size: 3vw;
@@ -2458,10 +2489,12 @@ button.btn5:hover {
   .category-buttons2 {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 80%;
+    max-width: 80vw;
     height: auto;
+    min-height: 2vh;
     margin: 0 auto;
-    padding: 0.5em 1em;
+    padding: 0.5em;
   }
 
 
